--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,7 @@
 	<div>By <a href="mailto:sinpowei@gmail.com">sinpo</a>, 2011.</div>
 	]]>
 	</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
